@@ -2401,70 +2401,73 @@ The two primary sources are the texts by
 
 <ol>
 <li> Howard G. Allen,
-    <a href="http://www.amazon.com/exec/obidos/ASIN/0070841004/qid%3D1010096524/ref%3Dsr%5F11%5F0%5F1/103-4346676-9568602">Background to Buckling</a>,
-     McGraw-Hill, 1980.  ASIN: 0070841004
+<a href="http://www.amazon.com/exec/obidos/ASIN/0070841004/qid%3D1010096524/ref%3Dsr%5F11%5F0%5F1/103-4346676-9568602">Background to Buckling</a>,
+McGraw-Hill, 1980.  ASIN: 0070841004
 
 <li> Klaus-Jurgen Bathe,
-    <a href="http://www.amazon.com/exec/obidos/ASIN/0133014584/qid=1003515087/sr=1-1/ref=sr_1_27_1/002-2386037-4350467">Finite Element Procedures</a>,
-    Prentice-Hall, 1995. ISBN: 0133014584
+<a href="http://www.amazon.com/exec/obidos/ASIN/0133014584/qid=1003515087/sr=1-1/ref=sr_1_27_1/002-2386037-4350467">Finite Element Procedures</a>,
+Prentice-Hall, 1995. ISBN: 0133014584
 
 <li> Arthur P. Boresi, Richard J. Schmidt, and Omar M. Sidebottom,
-    <a href="http://www.amazon.com/exec/obidos/ASIN/0471551570/ref=pd_cp_nsr_b_1/002-2386037-4350467">Advanced Mechanics of Materials</a>,
-    John Wiley & Sons, 1993.            ISBN: 0471551570
+<a href="http://www.amazon.com/exec/obidos/ASIN/0471551570/ref=pd_cp_nsr_b_1/002-2386037-4350467">Advanced Mechanics of Materials</a>,
+John Wiley & Sons, 1993.            ISBN: 0471551570
 
 <li> Raymond W. Clough and Joseph Penzien,
-    <a href="http://www.amazon.com/exec/obidos/ASIN/0070113920/qid%3D1003514837/ref%3Dsr%5F11%5F0%5F1/002-2386037-4350467">Dynamics of Structures</a>,
-    McGraw-Hill, 1993.   ASIN: 0070113920
+<a href="http://www.amazon.com/exec/obidos/ASIN/0070113920/qid%3D1003514837/ref%3Dsr%5F11%5F0%5F1/002-2386037-4350467">Dynamics of Structures</a>,
+McGraw-Hill, 1993.   ASIN: 0070113920
 
 <li> J. P. Den Hartog,
-    <a href="http://www.amazon.com/exec/obidos/ASIN/0486654079/qid=1003515697/sr=2-1/ref=sr_2_11_1/002-2386037-4350467">Advanced Strength of Materials</a>,
-    Dover Press, 1987.   ISBN: 0486654079
+<a href="http://www.amazon.com/exec/obidos/ASIN/0486654079/qid=1003515697/sr=2-1/ref=sr_2_11_1/002-2386037-4350467">Advanced Strength of Materials</a>,
+Dover Press, 1987.   ISBN: 0486654079
 
 <li> Thomas J. R. Hughes,
-    <a href="http://www.amazon.com/exec/obidos/ASIN/0486411818/ref=pd_pym_sim_1_2/002-2386037-4350467">The Finite Element Method: Linear Static and Dynamic Finite Element Analysis</a>,
-    Dover Press, 2000.   ISBN: 0486411818
+<a href="http://www.amazon.com/exec/obidos/ASIN/0486411818/ref=pd_pym_sim_1_2/002-2386037-4350467">The Finite Element Method: Linear Static and Dynamic Finite Element Analysis</a>,
+Dover Press, 2000.   ISBN: 0486411818
 
 <li> Aslam Kassimali,
-    <a href="http://www.amazon.com/exec/obidos/tg/detail/-/0534206700/qid=1036162662/sr=1-4/ref=sr_1_4/002-7358683-1549619?v=glance">Matrix Analysis of Structures</a>,
-    Brooks/Cole, 1999.   ISBN: 0534206700
+<a href="http://www.amazon.com/exec/obidos/tg/detail/-/0534206700/qid=1036162662/sr=1-4/ref=sr_1_4/002-7358683-1549619?v=glance">Matrix Analysis of Structures</a>,
+Brooks/Cole, 1999.   ISBN: 0534206700
 
 <li> Jaroslav Mackerle,
-    <a href="mackerle97.pdf">Finite element linear and nonlinear, static and dynamic analysis of structural
-    elements: a bibliography (1992-1995)</a>,
-    Engineering Computations, vol. 14, no. 4, pp. 347-440,  1997.
+<a href="http://www.emeraldinsight.com/Insight/viewContentItem.do;jsessionid=AFE435BAE8FB9E5AD60E5AEDC2A3ADB3?contentType=Article&contentId=1455399">
+Finite element linear and nonlinear, static and dynamic analysis of structural
+elements: a bibliography (1992-1995)</a>,
+Engineering Computations, vol. 14, no. 4, pp. 347-440,  1997.
 
 <li> Jaroslav Mackerle,
-    <a href="mackerle00.html">Finite element linear and nonlinear, static and dynamic analysis of structural
-    elements - an addendum - A bibliography (1996-1999)</a>,
-    Engineering Computations, vol. 17, no. 3, pp. 274-351,  2000.
+<a href="http://www.emeraldinsight.com/Insight/viewContentItem.do;jsessionid=AFE435BAE8FB9E5AD60E5AEDC2A3ADB3?contentType=Article&contentId=878085">
+Finite element linear and nonlinear, static and dynamic analysis of structural
+elements - an addendum - A bibliography (1996-1999)</a>,
+Engineering Computations, vol. 17, no. 3, pp. 274-351,  2000.
 
 <li> William McGuire, Richard H. Gallagher, and Ronald D. Ziemian,
-	<a href="http://www.amazon.com/Structural-Analysis-MASTAN2-William-McGuire/dp/0471376515/ref=pd_bbs_sr_1?ie=UTF8&s=books&qid=1198185313&sr=8-1">
-	Matrix Structural Analysis, 2nd ed.</a> John Wiley, 1999.
-	ISBN: 0471376515
+<a href="http://www.amazon.com/Structural-Analysis-MASTAN2-William-McGuire/dp/0471376515/ref=pd_bbs_sr_1?ie=UTF8&s=books&qid=1198185313&sr=8-1">
+Matrix Structural Analysis, 2nd ed.</a> John Wiley, 1999.
+ISBN: 0471376515
 
 <li> W.D. Pilkey, Weize Kang and Uwe Schramm,
-    <a href="pilkey95.pdf">New structural matrices for a beam element with shear deformation</a>,
-    Finite Elements in Analysis and Design, vol. 19, pp. 25-44,  1995.
+<a href="http://www.sciencedirect.com/science?_ob=ArticleURL&_udi=B6V36-3YB56X8-9&_user=10&_coverDate=02%2F28%2F1995&_rdoc=5&_fmt=high&_orig=browse&_srch=doc-info(%23toc%235722%231995%23999809998%23154123%23FLP%23display%23Volume)&_cdi=5722&_sort=d&_docanchor=&_ct=11&_acct=C000050221&_version=1&_urlVersion=0&_userid=10&md5=6e4bfbc9d1ce188436efb35e9a9e444d">
+New structural matrices for a beam element with shear deformation</a>,
+Finite Elements in Analysis and Design, vol. 19, pp. 25-44,  1995.
 
 <li> William H. Press, Saul A. Teukolsky, William T. Vetterling, Brian P. Flannery,
-    <a href="http://www.amazon.com/exec/obidos/ASIN/0521431085/qid=1003515201/sr=1-1/ref=sr_1_10_1/002-2386037-4350467">Numerical Recipes in C: The Art of Scientific Computing</a>,
-    Cambridge University Press, 1993.   ISBN: 0521431085
+<a href="http://www.amazon.com/exec/obidos/ASIN/0521431085/qid=1003515201/sr=1-1/ref=sr_1_10_1/002-2386037-4350467">Numerical Recipes in C: The Art of Scientific Computing</a>,
+Cambridge University Press, 1993.   ISBN: 0521431085
 
 <li> J.S. Przemieniecki,
-    <a href="http://www.amazon.com/exec/obidos/ASIN/0486649482/qid=1003514977/sr=1-1/ref=sr_1_8_1/002-2386037-4350467">Theory of Matrix Structural Analysis</a>,
-    Dover Press, 1985.   ISBN: 0486649482
+<a href="http://www.amazon.com/exec/obidos/ASIN/0486649482/qid=1003514977/sr=1-1/ref=sr_1_8_1/002-2386037-4350467">Theory of Matrix Structural Analysis</a>,
+Dover Press, 1985.   ISBN: 0486649482
 
 <li> Robert E. Sennett,
-    <a href="http://www.amazon.com/exec/obidos/ASIN/1577661435/qid=1003515858/sr=1-2/ref=sr_1_12_2/002-2386037-4350467">Matrix Analysis of Structures</a>,
-    Waveland Press, 2000.ISBN: 1577661435
+<a href="http://www.amazon.com/exec/obidos/ASIN/1577661435/qid=1003515858/sr=1-2/ref=sr_1_12_2/002-2386037-4350467">Matrix Analysis of Structures</a>,
+Waveland Press, 2000.ISBN: 1577661435
 
 <li> S. Timoshenko and J.N. Goodier, Theory of Elasticity, 2nd ed.,
-    McGraw Hill, 1951.
+McGraw Hill, 1951.
 
 <li> Ansel C. Ugural and Saul K. Fenster,
-    <a href="http://www.amazon.com/exec/obidos/ASIN/013137589X/qid=1003514318/sr=1-1/ref=sr_1_8_1/002-2386037-4350467">Advanced Strength and Applied Elasticity, 3rd ed.</a>,
-    Prentice-Hall, 1995. ISBN: 013137589X
+<a href="http://www.amazon.com/exec/obidos/ASIN/013137589X/qid=1003514318/sr=1-1/ref=sr_1_8_1/002-2386037-4350467">Advanced Strength and Applied Elasticity, 3rd ed.</a>,
+Prentice-Hall, 1995. ISBN: 013137589X
 
 </ol>
 
